--- a/src/pages/rsvp.scss
+++ b/src/pages/rsvp.scss
@@ -4,11 +4,6 @@
   margin-left: 0.5em;
   margin-right: 0.5em;
 
-  .title {
-    padding-top: 0.5em;
-    text-align: center;
-  }
-
   .info {
     text-align: center;
   }
